--- a/default.po
+++ b/default.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: candycane 0.72\n"
 "POT-Creation-Date: 2013-01-31 22:16+0100\n"
-"PO-Revision-Date: 2016-09-26 17:05+0200\n"
+"PO-Revision-Date: 2016-09-26 17:40+0200\n"
 "Last-Translator: Thomas Bouchet <thomas.bouchet@sourismaline.fr>\n"
 "Language-Team: Francesco Bianco <bianco@javanile.org>\n"
 "MIME-Version: 1.0\n"
@@ -113,7 +113,7 @@ msgstr "Supprimé avec succès."
 # notice_unable_delete_version
 #: Controller/CustomFieldsController.php:131
 msgid "Unable to delete custom field"
-msgstr "Impossible de supprimer le champ personnalisé."
+msgstr "Unable to delete custom field"
 
 # activerecord_error_invalid
 #: Controller/IssueStatusesController.php:132;138;166
@@ -132,11 +132,11 @@ msgstr "Erreur lors de la suppression avec l'id: %1$d"
 
 #: Controller/IssuesController.php:252;340;436
 msgid "No default issue status is defined. Please check your configuration (Go to \"Administration -> Issue statuses\")."
-msgstr "Aucun statut par défaut défini pour les demandes. Merci de vérifier votre configuration (Aller dans \"Administration -> Enumérations -> Priorités des demandes\")."
+msgstr "No default issue status is defined. Please check your configuration (Go to \"Administration -> Issue statuses\")."
 
 #: Controller/IssuesController.php:329
 msgid "No tracker is associated to this project. Please check the Project settings."
-msgstr "Aucun tracker n'est associé au projet. Merci de vérifier la configuration du projet."
+msgstr "No tracker is associated to this project. Please check the Project settings."
 
 # warning_attachments_not_saved
 #: Controller/IssuesController.php:503 Controller/WikiController.php:402
@@ -210,11 +210,11 @@ msgstr "Création avec succès."
 #: View/Elements/timelog/list.ctp:6 View/Projects/activity.ctp:1;88
 #: View/Timelog/details_csv.ctp:6 View/Timelog/edit.ctp:27
 msgid "Activity"
-msgstr "Activité"
+msgstr "Attività"
 
 #: Controller/RolesController.php:167
 msgid "This role is in use and can not be deleted."
-msgstr "Ce rôle est utilisé et ne peut donc pas être supprimé."
+msgstr "This role is in use and can not be deleted."
 
 # label_spent_time
 #: Controller/TimelogController.php:145 View/Elements/issues/edit.ctp:26
@@ -255,7 +255,7 @@ msgstr "bloqué"
 # notice_unable_delete_version
 #: Controller/VersionsController.php:74
 msgid "Unable to delete version."
-msgstr "Impossible de supprimer la version."
+msgstr "Unable to delete version."
 
 # mail_subject_register
 #: Controller/Component/MailerComponent.php:126
@@ -275,7 +275,7 @@ msgstr "La tua password"
 # label_news
 #: Controller/Component/MailerComponent.php:201 View/News/index.ctp:40;81
 msgid "News"
-msgstr "Annonces"
+msgstr "Notizie"
 
 # label_document
 #: Model/Document.php:41
@@ -386,12 +386,12 @@ msgstr "'1'"
 # field_tracker
 #: Model/Query.php:563
 msgid "tracker"
-msgstr "Tracker"
+msgstr " Traccia"
 
 # field_status
 #: Model/Query.php:569
 msgid "status"
-msgstr "Statut"
+msgstr "Stato"
 
 # field_priority
 #: Model/Query.php:575
@@ -479,7 +479,7 @@ msgstr "Impossible d'accéder au fichier database.php en écriture."
 
 #: Plugin/CcInstall/Controller/CcInstallController.php:132;152
 msgid "Could not connect to database."
-msgstr "Connexion à la base de données impossible."
+msgstr "Could not connect to database."
 
 #: Plugin/CcInstall/Controller/CcInstallController.php:142
 #, fuzzy
@@ -496,7 +496,7 @@ msgstr "Fichiers d'installation supprimés avec succès."
 
 #: Plugin/CcInstall/Controller/CcInstallController.php:181
 msgid "Could not delete installation files."
-msgstr "Impossible de supprimer les fichiers d'installation."
+msgstr "Could not delete installation files."
 
 # default_doc_category_user
 #: Plugin/CcInstall/Controller/CcInstallController.php:207
@@ -547,7 +547,7 @@ msgstr "Développement"
 #: Plugin/CcInstall/Controller/CcInstallController.php:218
 #: View/Admin/index.ctp:16;21 View/Elements/admin/sidebar.ctp:5;10
 msgid "New"
-msgstr "Nouveau"
+msgstr "Nuovo"
 
 # default_issue_status_assigned
 #: Plugin/CcInstall/Controller/CcInstallController.php:219
@@ -593,17 +593,17 @@ msgstr "Rapporteur"
 # default_tracker_bug
 #: Plugin/CcInstall/Controller/CcInstallController.php:231
 msgid "Bug"
-msgstr "Bogue"
+msgstr "Bug"
 
 # default_tracker_feature
 #: Plugin/CcInstall/Controller/CcInstallController.php:232
 msgid "Feature"
-msgstr "Fonctionnalité"
+msgstr "Funzionalità"
 
 # default_tracker_support
 #: Plugin/CcInstall/Controller/CcInstallController.php:233
 msgid "Support"
-msgstr "Support"
+msgstr "Supporto"
 
 #: Plugin/CcInstall/View/CcInstall/data.ctp:3
 msgid "Loading initial data to database which you configured."
@@ -615,15 +615,15 @@ msgstr "Cliquer ici pour construire votre base de données"
 
 #: Plugin/CcInstall/View/CcInstall/database.ctp:3
 msgid "Creating database conection setting. please type valid configuration for your database server."
-msgstr "Création des paramètres de connexion à la base de données. Merci de valider la configuration concernant votre serveur de base de données."
+msgstr "Creating database conection setting. please type valid configuration for your database server."
 
 #: Plugin/CcInstall/View/CcInstall/database.ctp:10
 msgid "Exsisting database name"
-msgstr "Nom d'une base de données existante"
+msgstr "Exsisting database name"
 
 #: Plugin/CcInstall/View/CcInstall/database.ctp:11
 msgid "Prefix for table name.(if you need)"
-msgstr "Préfixe pour les noms de tables (si nécessaire)."
+msgstr "Prefix for table name.(if you need)"
 
 #: Plugin/CcInstall/View/CcInstall/database.ctp:12
 msgid "Build database"
@@ -631,11 +631,11 @@ msgstr "Construire la base de données"
 
 #: Plugin/CcInstall/View/CcInstall/finish.ctp:14
 msgid "Delete the installation directory <strong>/app/Plugin/install</strong>."
-msgstr "Supprimer le répertoire d'installation <strong>/app/Plugin/install</strong>."
+msgstr "Delete the installation directory <strong>/app/Plugin/install</strong>."
 
 #: Plugin/CcInstall/View/CcInstall/finish.ctp:21
 msgid "Click here to delete installation files"
-msgstr "Cliquer ici pour supprimer les fichiers d'installation"
+msgstr "Click here to delete installation files"
 
 #: Plugin/CcInstall/View/CcInstall/index.ctp:8
 msgid "PDO extension is loaded."
@@ -698,9 +698,8 @@ msgid "Please activate mod_rewrite and .htaccess."
 msgstr "Merci d'activer mod_rewrite et la prise en compte des fichiers .htacess."
 
 #: Plugin/CcInstall/View/CcInstall/index.ctp:57
-#, fuzzy
 msgid "Or uncomment \"//Configure::write('App.baseUrl', env('SCRIPT_NAME'));\" in app/Config/core.php and remove all .htaccess."
-msgstr "Ou commenter \"//Configure::write('App.baseUrl', env('SCRIPT_NAME'));\" dans le répertoire /app/Config/core.php et supprimer tous les .htaccess"
+msgstr "Or uncomment \"//Configure::write('App.baseUrl', env('SCRIPT_NAME'));\" in app/Config/core.php and remove all .htaccess."
 
 #: Plugin/CcInstall/View/CcInstall/index.ctp:70
 msgid "Click here to begin installation"
@@ -727,30 +726,30 @@ msgstr "Installeur "
 #: View/Admin/info.ctp:8 View/Elements/admin/sidebar.ctp:46
 #: View/My/account.ctp:18
 msgid "Information"
-msgstr "Information"
+msgstr "Informazioni"
 
 # label_module_plural
 #: Vendor/candycane/MenuContainer.php:146 View/Projects/add.ctp:19
 msgid "Modules"
-msgstr "Modules"
+msgstr "Moduli"
 
 # label_member_plural
 #: Vendor/candycane/MenuContainer.php:151 View/Projects/list_members.ctp:1
 #: View/Projects/show.ctp:55
 msgid "Members"
-msgstr "Membres"
+msgstr "Membri"
 
 # label_version_plural
 #: Vendor/candycane/MenuContainer.php:156
 #: View/Elements/projects/sidebar/changelog.ctp:10
 #: View/Elements/projects/sidebar/roadmap.ctp:16
 msgid "Versions"
-msgstr "Versions"
+msgstr "Versioni"
 
 # label_issue_category_plural
 #: Vendor/candycane/MenuContainer.php:161
 msgid "Issue categories"
-msgstr "Catégories de demande"
+msgstr "Categorie di problemi"
 
 # label_authentication
 #: Vendor/candycane/SettingContainer.php:29 View/Elements/users/form.ctp:28
@@ -760,7 +759,7 @@ msgstr "Authentification"
 # project_module_issue_tracking
 #: Vendor/candycane/SettingContainer.php:39 View/Projects/show.ctp:37
 msgid "Issue tracking"
-msgstr "Suivi des demandes"
+msgstr "Traccia problemi"
 
 # field_mail_notification
 #: Vendor/candycane/SettingContainer.php:44 View/My/account.ctp:27
@@ -809,7 +808,7 @@ msgstr "OK"
 # field_new_password
 #: View/Account/password_recovery.ctp:11 View/My/password.ctp:24
 msgid "New password"
-msgstr "Nouveau mot de passe"
+msgstr "New password"
 
 # field_password_confirmation
 #: View/Account/password_recovery.ctp:22 View/Account/register.ctp:23
@@ -836,7 +835,7 @@ msgstr "Confirmation"
 #: View/Trackers/edit.ctp:24 View/Versions/edit.ctp:31 View/Wiki/edit.ctp:28
 #: View/Workflows/edit.ctp:83
 msgid "Save"
-msgstr "Sauvegarder"
+msgstr "Salva"
 
 # label_register
 #: View/Account/register.ctp:1 View/Elements/account_menu.ctp:9
@@ -851,12 +850,12 @@ msgstr "Doit faire au moins %d caractères."
 # field_firstname
 #: View/Account/register.ctp:29 View/Elements/my/informations.ctp:2
 msgid "Firstname"
-msgstr "Prénom"
+msgstr "Cognome"
 
 # field_lastname
 #: View/Account/register.ctp:34 View/Elements/my/informations.ctp:6
 msgid "Lastname"
-msgstr "Nom"
+msgstr "Nome"
 
 # field_language
 #: View/Account/register.ctp:44 View/Elements/my/informations.ctp:14
@@ -872,7 +871,7 @@ msgstr "Langue"
 #: View/News/show.ctp:2 View/Trackers/list.ctp:25 View/Versions/show.ctp:7
 #: View/Wiki/show.ctp:6 View/Workflows/edit.ctp:35 View/Workflows/index.ctp:49
 msgid "Edit"
-msgstr "Modifier"
+msgstr "Modifica"
 
 # label_registered_on
 #: View/Account/show.ctp:23
@@ -882,7 +881,7 @@ msgstr "Inscrit le"
 # label_last_login
 #: View/Account/show.ctp:26
 msgid "Last connection"
-msgstr "Dernière connexion"
+msgstr "Ultima connessione"
 
 # label_reported_issues
 #: View/Account/show.ctp:57 View/Elements/my/blocks/issuesreportedbyme.ctp:1
@@ -898,56 +897,56 @@ msgstr "Disponibile anche in:"
 # label_administration
 #: View/Admin/index.ctp:1 View/Elements/admin/sidebar.ctp:1
 msgid "Administration"
-msgstr "Administration"
+msgstr "Amministrazione"
 
 # label_user_plural
 #: View/Admin/index.ctp:20 View/Elements/admin/sidebar.ctp:9
 #: View/Helper/CustomFieldHelper.php:40 View/Users/list.ctp:106
 msgid "Users"
-msgstr "Utilisateurs"
+msgstr "Utenti"
 
 # label_role_and_permissions
 #: View/Admin/index.ctp:25 View/Elements/admin/sidebar.ctp:14
 msgid "Roles and permissions"
-msgstr "Rôles et permissions"
+msgstr "Ruoli e permessi"
 
 # label_tracker_plural
 #: View/Admin/index.ctp:29 View/Elements/admin/sidebar.ctp:18
 #: View/Elements/custom_fields/form.ctp:111 View/Elements/projects/form.ctp:56
 #: View/Trackers/list.ctp:12
 msgid "Trackers"
-msgstr "Trackers"
+msgstr "Tracce"
 
 # label_issue_status_plural
 #: View/Admin/index.ctp:30 View/Elements/admin/sidebar.ctp:22
 #: View/IssueStatuses/edit.ctp:8 View/IssueStatuses/list.ctp:12
 msgid "Issue statuses"
-msgstr "Statuts des demandes"
+msgstr "Stati problemi"
 
 # label_workflow
 #: View/Admin/index.ctp:31 View/Elements/admin/sidebar.ctp:26
 #: View/Workflows/edit.ctp:12 View/Workflows/index.ctp:8
 msgid "Workflow"
-msgstr "Processus"
+msgstr "Flusso di lavoro"
 
 # label_custom_field_plural
 #: View/Admin/index.ctp:35 View/CustomFields/edit.ctp:8
 #: View/CustomFields/list.ctp:8;67 View/Elements/admin/sidebar.ctp:30
 #: View/Elements/projects/form.ctp:88
 msgid "Custom fields"
-msgstr "Champs personnalisés"
+msgstr "Campi personalizzati"
 
 # label_enumerations
 #: View/Admin/index.ctp:39 View/Elements/admin/sidebar.ctp:34
 #: View/Enumerations/edit.ctp:8 View/Enumerations/list.ctp:8
 msgid "Enumerations"
-msgstr "Enumérations"
+msgstr "Nomenclatura"
 
 # label_settings
 #: View/Admin/index.ctp:43 View/Elements/admin/sidebar.ctp:38
 #: View/Projects/settings.ctp:1 View/Settings/edit.ctp:8
 msgid "Settings"
-msgstr "Configuration"
+msgstr "Impostazioni"
 
 # label_plugins
 #: View/Admin/index.ctp:53 View/Admin/plugins.ctp:8
@@ -972,7 +971,7 @@ msgstr "Pilote de base de données"
 #: View/Issues/issue_to_pdf.ctp:69 View/Issues/show.ctp:127
 #: View/Projects/add_version.ctp:21 View/Versions/edit.ctp:16
 msgid "Description"
-msgstr "Description"
+msgstr "Descrizione"
 
 # field_author
 #: View/Admin/plugins.ctp:14 View/Elements/mailer/issue_text_html.ctp:7
@@ -1041,7 +1040,7 @@ msgstr "Voulez-vous créer votre propre plugin ? Lancer la commande ci-dessous p
 #: View/Admin/projects.ctp:9 View/Elements/users/memberships.ctp:58
 #: View/Projects/add.ctp:8 View/Projects/index.ctp:13
 msgid "New project"
-msgstr "Nouveau projet"
+msgstr "Nuovo progetto"
 
 # label_filter_plural
 #: View/Admin/projects.ctp:16 View/Elements/queries/form.ctp:27
@@ -1056,7 +1055,7 @@ msgstr "Filtres"
 #: View/Issues/bulk_edit.ctp:15 View/Issues/context_menu.ctp:7
 #: View/Issues/issue_to_pdf.ctp:14 View/Issues/show.ctp:53
 msgid "Status"
-msgstr "Statut"
+msgstr "Stato"
 
 # button_apply
 #: View/Admin/projects.ctp:34 View/Elements/projects/sidebar/activity.ctp:15
@@ -1078,7 +1077,7 @@ msgstr "Sottoprogetti"
 #: View/Admin/projects.ctp:60 View/Elements/projects/form.ctp:28
 #: View/Elements/queries/form.ctp:11
 msgid "Public"
-msgstr "Public"
+msgstr "Pubblico"
 
 # field_created_on
 #: View/Admin/projects.ctp:61 View/Elements/my/sidebar.ctp:4
@@ -1110,7 +1109,7 @@ msgstr "Désarchiver"
 #: View/Projects/destroy.ctp:23 View/Roles/list.ctp:105
 #: View/Trackers/list.ctp:35 View/Wiki/show.ctp:58 View/Wikis/destroy.ctp:17
 msgid "Delete"
-msgstr "Supprimer"
+msgstr "Elimina"
 
 # button_download
 #: View/Attachments/diff.ctp:6 View/Attachments/file.ctp:6
@@ -1125,7 +1124,7 @@ msgstr "Télécharger"
 #: View/Projects/add_version.ctp:17 View/Trackers/edit.ctp:13
 #: View/Trackers/new.ctp:13 View/Versions/edit.ctp:12
 msgid "Name"
-msgstr "Nom"
+msgstr "Nome"
 
 # field_field_format
 #: View/CustomFields/list.ctp:26 View/Elements/custom_fields/form.ctp:83
@@ -1154,7 +1153,7 @@ msgstr "Utilisé par"
 #: View/CustomFields/list.ctp:32 View/IssueStatuses/list.ctp:19
 #: View/Roles/list.ctp:17 View/Trackers/list.ctp:18
 msgid "Sort"
-msgstr "Trier"
+msgstr "Ordina"
 
 # label_sort_highest
 #: View/CustomFields/list.ctp:46 View/Enumerations/list.ctp:25
@@ -1204,12 +1203,12 @@ msgstr "Nouveau champ personnalisé"
 #: View/Elements/account_menu.ctp:3 View/Elements/my/sidebar.ctp:1
 #: View/My/account.ctp:12
 msgid "My account"
-msgstr "Mon compte"
+msgstr "Il mio account"
 
 # label_logout
 #: View/Elements/account_menu.ctp:4
 msgid "Sign out"
-msgstr "Déconnexion"
+msgstr "Disconnetti"
 
 # text_diff_truncated
 #: View/Elements/diff.ctp:88
@@ -1275,7 +1274,7 @@ msgstr "Valeurs possibles"
 #: View/Elements/enumerations/_form.ctp:9 View/IssueStatuses/edit.ctp:20
 #: View/IssueStatuses/list.ctp:17 View/IssueStatuses/new.ctp:20
 msgid "Default value"
-msgstr "Valeur par défaut"
+msgstr "Valore di default"
 
 # field_is_filter
 #: View/Elements/custom_fields/form.ctp:130
@@ -1510,12 +1509,12 @@ msgstr "Demandes"
 #: View/Elements/my/blocks/issuesreportedbyme.ctp:14 View/Projects/index.ctp:14
 #: View/Projects/show.ctp:45
 msgid "View all issues"
-msgstr "Vedi tutti i problemi"
+msgstr " Vedi tutti i problemi"
 
 # field_summary
 #: View/Elements/issues/sidebar.ctp:5 View/Workflows/edit.ctp:9
 msgid "Summary"
-msgstr "Sommaire"
+msgstr "Sommario"
 
 # label_change_log
 #: View/Elements/issues/sidebar.ctp:6
@@ -1527,7 +1526,7 @@ msgstr "Journal des modifications"
 #: View/Elements/issues/sidebar.ctp:21
 #: View/Elements/projects/sidebar/show.ctp:8
 msgid "Planning"
-msgstr "Calendrier"
+msgstr "Calendario"
 
 # label_query_plural
 #: View/Elements/issues/sidebar.ctp:28
@@ -1610,7 +1609,7 @@ msgstr "Créer la clef d'accès à l'API"
 # field_parent
 #: View/Elements/projects/form.ctp:15 View/Projects/show.ctp:21
 msgid "Subproject of"
-msgstr "Sous-projet de"
+msgstr "Sottoprogetto di "
 
 # text_project_identifier_info
 #: View/Elements/projects/form.ctp:24
@@ -1633,7 +1632,7 @@ msgstr "Utilisateur"
 #: View/Elements/projects/settings/members.ctp:11;107 View/Roles/edit.ctp:8
 #: View/Roles/list.ctp:16 View/Workflows/edit.ctp:17
 msgid "Role"
-msgstr "Rôle"
+msgstr "Ruolo"
 
 # button_change
 #: View/Elements/projects/settings/members.ctp:37
@@ -2042,7 +2041,7 @@ msgstr "Un nouvel utilisateur (%s) s'est inscrit. L'activation du compte est en 
 #: View/Emails/html/lost_password.ctp:1 View/Emails/text/lost_password.ctp:1
 #: View/mailer/lost_password.text.plain.ctp:1
 msgid "To change your password, click on the following link:"
-msgstr "Pour modifier votre mot de passe, cliquez sur le lien suivant:"
+msgstr "To change your password, click on the following link:"
 
 # mail_body_register
 #: View/Emails/html/register.ctp:1 View/Emails/text/register.ctp:1
@@ -2323,12 +2322,12 @@ msgstr "Réassigner les demande à cette catégorie"
 #: View/IssueStatuses/edit.ctp:16 View/IssueStatuses/list.ctp:18
 #: View/IssueStatuses/new.ctp:16
 msgid "Issue closed"
-msgstr "Demande fermée"
+msgstr "Problema chiuso"
 
 # label_issue_status_new
 #: View/IssueStatuses/list.ctp:9 View/IssueStatuses/new.ctp:8
 msgid "New status"
-msgstr "Nouveau statut"
+msgstr "Nuovo stato"
 
 # label_bulk_edit_selected_issues
 #: View/Issues/bulk_edit.ctp:1
@@ -2448,7 +2447,7 @@ msgstr "'Disponibile anche in:'"
 # label_logged_as
 #: View/Layouts/base.ctp:24 View/Themed/kuma/Layouts/base.ctp:24
 msgid "Logged in as"
-msgstr "Connecté en tant que"
+msgstr "Connesso come"
 
 # label_search
 #: View/Layouts/base.ctp:31 View/Search/index.ctp:1
@@ -2487,7 +2486,7 @@ msgstr "Modifier le mot de passe"
 # label_preferences
 #: View/My/account.ctp:32
 msgid "Preferences"
-msgstr "Préférences"
+msgstr "Impostazioni"
 
 # label_personalize_page
 #: View/My/page.ctp:2
@@ -2544,12 +2543,12 @@ msgstr "D/L"
 # label_overview
 #: View/Projects/show.ctp:4;84
 msgid "Overview"
-msgstr "Aperçu"
+msgstr "Panoramica"
 
 # field_homepage
 #: View/Projects/show.ctp:10
 msgid "Homepage"
-msgstr "Page principale"
+msgstr "Homepage"
 
 # label_on
 #: View/Projects/show.ctp:42
@@ -2733,7 +2732,7 @@ msgstr "Etes vous sûr de vouloir supprimer ce wiki et tout ses contenus ?"
 # text_workflow_edit
 #: View/Workflows/edit.ctp:14
 msgid "Select a role and a tracker to edit the workflow"
-msgstr "Sélectionner un rôle et un tracker pour modifier le workflow"
+msgstr "Seleziona un ruolo ed una traccia per modificare il flusso di lavoro"
 
 # label_current_status
 #: View/Workflows/edit.ctp:48
